--- a/update.yml
+++ b/update.yml
@@ -6,7 +6,7 @@
 
   tasks:
   - name: check for updates (yum)
-    yum: list=updates update_cache=true
+    yum: list=updates update_cache=true security: yes
     register: yumoutput
   - debug: 
      msg: "{{ yumoutput.results | map(attribute='name') | list }}"
